<resources>
    <string name="app_name">MPC</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="need_an_account_register">Need an Account</string>
    <string name="already_have_an_account_login">already have an account?login</string>
    <string name="register">register</string>
    <string name="Register">Register</string>
    <string name="today_s_bible_verse">Today\'s Bible Verse</string>
    <string name="psalm_31_24">Psalm 31:24</string>
    <string name="be_strong_and_let_your_heart_take_courage_all_you_who_wait_for_the_lord">Be strong, and let your heart take courage, all you who wait for the LORD!</string>
    <string name="prayer">Prayer</string>
    <string name="event">Event</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="user_name">User Name</string>
    <string name="profile_pic">Profile pic</string>
    <string name="recovery">Recovery</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="where">Where</string>
    <string name="when">when</string>
    <string name="prayer_for">Prayer for</string>
    <string name="for_whom">For Whom</string>
    <string name="request">Request</string>
    <string name="preach">Preach</string>
    <string name="hi">Hi</string>

</resources>